--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Neo Site Blocker",
   "version": "1.0.0",
   "author": "AHpx",
-  "description": "A website blocker, help you to focus on more important things, preventing your day to be ruined.",
+  "description": "To make your perfect day not to be ruined by wandering in the internet (if you had done this).",
   "type": "module",
   "license": "MIT",
   "keywords": [
